--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,20 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
+        "laravel/framework": "5.2.*",
         "ticketevolution/ticketevolution-php": "^3.0",
         "monolog/monolog": "^1.17",
         "guzzlehttp/log-subscriber": "^1.0",
-        "laravelcollective/html": "^5.1"
+        "laravelcollective/html": "5.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "barryvdh/laravel-debugbar": "^2.0",
-        "barryvdh/laravel-ide-helper": "^2.1"
+        "barryvdh/laravel-debugbar": "^2.1",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "symfony/css-selector": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
