--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 APP_ENV=local
 APP_DEBUG=true
+APP_LOG=daily
 APP_KEY=SomeRandomString
 APP_URL=http://127.0.0.1
+
+ALLOW_REGISTRATION=false
 
 DB_HOST=localhost
 DB_DATABASE=homestead
