--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
     "name": "jwcobb/tevo-harvester",
     "description": "A tool for caching catalog data from the Ticket Evolution API.",
-    "keywords": ["Ticket Evolution", "API"],
+    "keywords": [
+        "Ticket Evolution",
+        "API"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
         "ticketevolution/ticketevolution-php": "^3.0",
         "monolog/monolog": "^1.17",
         "guzzlehttp/log-subscriber": "^1.0",
-        "laravelcollective/html": "5.2.*"
+        "laravelcollective/html": "5.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "barryvdh/laravel-debugbar": "^2.1",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
