--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,20 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "ticketevolution/ticketevolution-php": "^3.0",
         "monolog/monolog": "^1.17",
         "guzzlehttp/log-subscriber": "^1.0",
-        "laravelcollective/html": "5.3.*",
-        "iatstuti/laravel-nullable-fields": "^1.4"
+        "laravelcollective/html": "5.4.*",
+        "iatstuti/laravel-nullable-fields": "^1.4",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~5.7",
         "barryvdh/laravel-debugbar": "^2.1",
-        "barryvdh/laravel-ide-helper": "^2.1",
-        "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "barryvdh/laravel-ide-helper": "^2.1"
     },
     "autoload": {
         "classmap": [
