--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
     "require": {
         "php": ">=7.1",
         "laravel/framework": "5.4.*",
-        "ticketevolution/ticketevolution-php": "^3.0",
-        "monolog/monolog": "^1.17",
-        "guzzlehttp/log-subscriber": "^1.0",
+        "ticketevolution/ticketevolution-php": "dev-dev-4.0.0",
         "laravelcollective/html": "5.4.*",
         "iatstuti/laravel-nullable-fields": "^1.4",
         "laravel/tinker": "~1.0"
@@ -21,8 +19,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
-        "barryvdh/laravel-debugbar": "^2.1",
-        "barryvdh/laravel-ide-helper": "^2.1"
+        "barryvdh/laravel-debugbar": "^2.3",
+        "barryvdh/laravel-ide-helper": "^2.3"
     },
     "autoload": {
         "classmap": [
