--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,42 @@
+APP_NAME=tevo-harvester
 APP_ENV=local
+APP_KEY=SomeRandomString
 APP_DEBUG=true
 APP_LOG=daily
-APP_KEY=SomeRandomString
+APP_LOG_LEVEL=debug
 APP_URL=http://127.0.0.1
 
-ALLOW_REGISTRATION=false
-
-DB_HOST=localhost
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+
+
+ALLOW_REGISTRATION=true
+
 TICKETEVOLUTION_API_BASEURL=https://api.ticketevolution.com/v9
 TICKETEVOLUTION_API_VERSION=v9
 TICKETEVOLUTION_API_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TICKETEVOLUTION_API_SECRET=yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
-TEVO_API_CLIENT_LOG_LEVEL=INFO
