--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
     "name": "jwcobb/tevo-harvester",
     "description": "A tool for caching catalog data from the Ticket Evolution API.",
-    "keywords": [
-        "Ticket Evolution",
-        "API"
-    ],
+    "keywords": ["Ticket Evolution", "API"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1",
         "laravel/framework": "5.4.*",
-        "ticketevolution/ticketevolution-php": "dev-dev-4.0.0",
+        "ticketevolution/ticketevolution-php": "~4.0",
         "laravelcollective/html": "5.4.*",
         "iatstuti/laravel-nullable-fields": "^1.4",
         "laravel/tinker": "~1.0"
@@ -36,27 +33,26 @@
         }
     },
     "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
+        "post-root-package-install": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan optimize"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
             "php artisan optimize"
-        ],
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
