--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,28 @@
 {
     "name": "jwcobb/tevo-harvester",
     "description": "A tool for caching catalog data from the Ticket Evolution API.",
-    "keywords": ["Ticket Evolution", "API"],
+    "keywords": [
+        "Ticket Evolution",
+        "API"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "ticketevolution/ticketevolution-php": "~4.0",
-        "laravelcollective/html": "5.4.*",
+        "laravelcollective/html": "5.5.*",
         "iatstuti/laravel-nullable-fields": "^1.4",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "fideloper/proxy": "~3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "barryvdh/laravel-debugbar": "^2.3",
-        "barryvdh/laravel-ide-helper": "^2.3"
+        "barryvdh/laravel-ide-helper": "^2.3",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -39,20 +44,25 @@
         "post-create-project-cmd": [
             "php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
     }
 }
