--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "type": "project",
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.6.*",
         "ticketevolution/ticketevolution-php": "~4.0",
-        "laravelcollective/html": "5.5.*",
+        "laravelcollective/html": "5.6.*",
         "iatstuti/laravel-nullable-fields": "^1.4",
         "laravel/tinker": "~1.0",
-        "fideloper/proxy": "~3.3"
+        "fideloper/proxy": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,7 +22,8 @@
         "phpunit/phpunit": "~6.0",
         "barryvdh/laravel-debugbar": "^2.3",
         "barryvdh/laravel-ide-helper": "^2.3",
-        "filp/whoops": "~2.0"
+        "filp/whoops": "~2.0",
+        "nunomaduro/collision": "~1.1"
     },
     "autoload": {
         "classmap": [
