--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
         "iatstuti/laravel-nullable-fields": "^1.4",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "nothingworks/blade-svg": "^0.3.0",
         "ticketevolution/ticketevolution-php": "~4.0"
@@ -23,7 +23,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "nunomaduro/collision": "~1.1",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "beyondcode/laravel-dump-server": "~1.0"
     },
     "autoload": {
         "classmap": [
